[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "ros2_easy_test"
authors = [
  { name = "Felix Divo", email = "felix.divo@sailingteam.tu-darmstadt.de" },
]
description = "A Python test framework for ROS2 allowing simple and expressive assertions based on message interactions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Framework :: Robot Framework :: Library",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: BDD",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/felixdivo/ros2-easy-test" }
# The package is discovered autoamtically https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
# This includes the py.typed file
dependencies = [
  "makefun>=1.15.1"
]

[project.optional-dependencies]
dev = [
  "black~=23.1",
  "isort",
  "pylint~=2.17.0",  # Explicitly pin the version since it changes frequently and is disrupting
  "hacking",
  "flake8-bugbear",
  "pytest",
  "pytest-cov",
  "hypothesis",  # To demonstrate how it works with this
  "sphinx",
  "sphinx_rtd_theme",
]

[tool.setuptools.dynamic]
version = { attr = "ros2_easy_test.__version__" }

[tool.pytest.ini_options]
# The latter part shows the duration of the slowest tests
addopts = "--color=yes --cov=ros2_easy_test --doctest-modules --cov-report html --durations=0 --durations-min=1.0"
testpaths = [
    "ros2_easy_test",  # for the doctests
    "tests",  # for the actual tests
]

[tool.flake8]
max-line-length = 88
select = ["C", "E", "F", "W", "B", "B950"]
extend-ignore = ["E203", "E501"]

[tool.isort]
profile = "black"
